@@ -13,6 +13,7 @@ postgresql-common (171) UNRELEASED; urgency=medium
     instruct the user how to proceed with the upgrade.
   * pg_buildext: Replace multiple occurrences of PGVERSION on the same line,
     and implement replacing for debian/tests/control.in.
+  * t/015_start_stop.t: Validate pg_ctlcluster/systemctl exit codes.
 
   [ Martin Pitt ]
   * pg_upgradecluster: Fix "ANALZYE" typo.
